# OlnineCourse

./: .env.example  TODO  pyproject.toml
apps/: admin.py  course_views.py  serializers.py  tasks.py  token.py  urls.py  views.py
apps/migrations/: 0001_initial.py
apps/models/: __init__.py  category.py  course.py  enrollment.py  user.py
root/: settings.py  urls.py
templates/courses/: course_detail.html  course_list.html
