[project]
name = "olninecourse"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.7",
    "django-celery-email>=3.0.0",
    "djangorestframework>=3.16.1",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
]
